--- a/Hotel App/Application/Landing/City Guide/CityGuideViewController.xib
+++ b/Hotel App/Application/Landing/City Guide/CityGuideViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CityGuideViewController">
             <connections>
+                <outlet property="cityTableView" destination="lvm-2B-pex" id="KSs-9Z-GYO"/>
                 <outlet property="makView" destination="R4S-d8-4GQ" id="ENB-Hh-NoV"/>
                 <outlet property="view" destination="2" id="3"/>
             </connections>
@@ -41,6 +42,15 @@
                         <outlet property="delegate" destination="-1" id="sNQ-d7-2v8"/>
                     </connections>
                 </mapView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="lvm-2B-pex">
+                    <rect key="frame" x="0.0" y="52" width="372" height="716"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="bag-fT-iXR"/>
+                        <outlet property="delegate" destination="-1" id="Dhz-Hj-pa7"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
